Fixed 0 appending Bug

--- a/MauiApplication/MainPage.xaml
+++ b/MauiApplication/MainPage.xaml
@@ -21,17 +21,17 @@
                 Text="1"
                 Grid.Row="0"
                 Grid.Column="0"
-                Clicked="Click1"/>
+                Clicked="Click"/>
             <Button 
                 Text="2"
                 Grid.Row="0"
                 Grid.Column="1"
-                Clicked="Click2"/>
+                Clicked="Click"/>
             <Button 
                 Text="3"
                 Grid.Row="0"
                 Grid.Column="2"
-                Clicked="Click3"/>
+                Clicked="Click"/>
             <Button 
                 Text="+"
                 Grid.Row="0"
@@ -41,17 +41,17 @@
                 Text="4"
                 Grid.Row="1"
                 Grid.Column="0"
-                Clicked="Click4"/>
+                Clicked="Click"/>
             <Button 
                 Text="5"
                 Grid.Row="1"
                 Grid.Column="1"
-                Clicked="Click5"/>
+                Clicked="Click"/>
             <Button 
                 Text="6"
                 Grid.Row="1"
                 Grid.Column="2"
-                Clicked="Click6"/>
+                Clicked="Click"/>
             <Button 
                 Text="-"
                 Grid.Row="1"
@@ -61,17 +61,17 @@
                 Text="7"
                 Grid.Row="2"
                 Grid.Column="0"
-                Clicked="Click7"/>
+                Clicked="Click"/>
             <Button 
                 Text="8"
                 Grid.Row="2"
                 Grid.Column="1"
-                Clicked="Click8"/>
+                Clicked="Click"/>
             <Button 
                 Text="9"
                 Grid.Row="2"
                 Grid.Column="2"
-                Clicked="Click9"/>
+                Clicked="Click"/>
             <Button 
                 Text="*"
                 Grid.Row="2"
@@ -86,7 +86,7 @@
                 Text="0"
                 Grid.Row="3"
                 Grid.Column="1"
-                Clicked="Click0"/>
+                Clicked="Click"/>
             <Button 
                 Text="="
                 Grid.Row="3"
